update profile management, MFA and AI assistant backend